myteo/test/analyze/type_check/while.exp
Error: Expected type `Bool` but found `Int`
test/analyze/type_check/while.myte:5:9
 5 |   while (1) {}
   |          ^